Sketching with tools.analyzer and clojail, add policy, deps